deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hspmgmt-deployment
  namespace: hospital
  labels:
    app: hspmgmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hspmgmt
  template:
    metadata:
      labels:
        app: hspmgmt
    spec:
      containers:
        - name: hspmgmt-container
          image: nkcharan/hspmgmt:v1
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
