service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hspmgmt-service
  namespace: hospital
spec:
  selector:
    app: hspmgmt  # match labels from deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP  # ✅ change from LoadBalancer to ClusterIP
