ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: hospital
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: funnytask.cloud         
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hspmgmt-service
            port:
              number: 5000
